feat: initialize Prisma schema and set up basic Express server
- Added Prisma schema for Topic and Question models with relationships.
- Created initial structure for question and topic controllers and models.
- Implemented Express server with middleware for security and logging.
- Added health check endpoint for server status.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,13 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+.DS_Store
+.env
+mssql
+/node_modules/
+/package-lock.json
+/package.json
+
+# n8n data (contains database, credentials, execution history)
+n8n/data/
