feat: migrate backend from SQL Server to PostgreSQL
- Updated package.json to include PostgreSQL dependencies.
- Changed Prisma datasource provider from SQL Server to PostgreSQL.
- Modified question and topic models to use PostgreSQL syntax for queries.
- Implemented new controllers for getting questions by topic IDs and adjusting question priority.
- Updated routes to include new endpoints for question priority management.
- Refactored database connection logic to use PostgreSQL.
- Adjusted Docker Compose configuration to use PostgreSQL instead of SQL Server.
- Enhanced frontend to support topic selection for the minigame and added priority adjustment buttons.
- Improved combobox component to filter options based on user input.
- Added new hooks for fetching questions by topic and managing question priority.

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,9 @@ mssql
 
 # n8n data (contains database, credentials, execution history)
 n8n/data/
+
+postgres/
+postgres-data/
+*.sql
+*.dump
+*.backup
