--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
 		"mssql": "^11.0.1",
 		"multer": "^2.0.2",
 		"nodemailer": "^7.0.10",
+		"pg": "^8.16.3",
 		"zod": "^4.1.3"
 	},
 	"devDependencies": {
@@ -54,6 +55,7 @@
 		"@types/mssql": "^9.1.7",
 		"@types/multer": "^2.0.0",
 		"@types/nodemailer": "^7.0.3",
+		"@types/pg": "^8.15.6",
 		"@types/socket.io": "^3.0.1",
 		"@types/supertest": "^6.0.3",
 		"@typescript-eslint/eslint-plugin": "^8.41.0",
