--- a/compose.yml
+++ b/compose.yml
@@ -47,6 +47,7 @@ services:
         container_name: housetutor-frontend
         environment:
             - PORT=3000
+            - BACKEND_URL=http://backend:8000
         env_file:
             - path: .env
               required: true
