--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint",
+    "start": "next start -H 0.0.0.0 -p 3000",
     "test": "npx playwright test && npx playwright show-report"
   },
   "dependencies": {
