fix: update database host and add .ci.env to .gitignore

--- a/.ci.env
+++ b/.ci.env
@@ -2,7 +2,7 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=housetutor
-POSTGRES_HOST=db
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
 # auth
@@ -11,7 +11,7 @@ JWT_EXPIRES_IN="7d"
 PORT=8000
 
 # prisma
-DATABASE_URL=postgresql://postgres:postgres@db:5432/housetutor
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/housetutor
 
 # frontend
 NEXTAUTH_SECRET=0c6365ea9581d838d41b905c6e526799
