--- a/.ci.env
+++ b/.ci.env
@@ -16,5 +16,5 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/housetutor
 # frontend
 NEXTAUTH_SECRET=0c6365ea9581d838d41b905c6e526799
 NEXTAUTH_URL=http://localhost:3000
-BACKEND_URL=http://localhost:8000/api/v1
-NEXT_PUBLIC_BACKEND_HOST=http://localhost:8000/api/v1
+BACKEND_URL=http://localhost:8000
+NEXT_PUBLIC_BACKEND_HOST=http://localhost:8000
