--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -2,12 +2,11 @@ name: Docker Image CI
 
 on:
     push:
-        branches: [ "main", "deployment-setup" ]
+        branches: ['main', 'master', 'deployment-setup']
     workflow_dispatch:
 
 jobs:
     build:
-
         runs-on: ubuntu-latest
 
         steps:
@@ -17,8 +16,8 @@ jobs:
             - name: Login to Docker Hub
               uses: docker/login-action@v3
               with:
-                username: ${{ secrets.DOCKER_USER }}
-                password: ${{ secrets.DOCKER_TOKEN }}
+                  username: ${{ secrets.DOCKER_USER }}
+                  password: ${{ secrets.DOCKER_TOKEN }}
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v3
 
@@ -28,13 +27,13 @@ jobs:
             - name: Build Images & Tag & push Backend
               uses: docker/build-push-action@v6
               with:
-                context: ./backend
-                push: true
-                tags: ${{ secrets.DOCKER_USER }}/kupantip-backend:latest
+                  context: ./backend
+                  push: true
+                  tags: ${{ secrets.DOCKER_USER }}/kupantip-backend:latest
 
             - name: Build Images & Tag & push Frontend
               uses: docker/build-push-action@v6
               with:
-                context: ./frontend
-                push: true
-                tags: ${{ secrets.DOCKER_USER }}/kupantip-frontend:latest
+                  context: ./frontend
+                  push: true
+                  tags: ${{ secrets.DOCKER_USER }}/kupantip-frontend:latest
