--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
     push:
-        branches: ['main', 'master', 'deployment-setup']
+        branches: ['main', 'master', 'deployment-setup', 'refactor/master']
     workflow_dispatch:
 
 jobs:
